# docs/swagger.json
@@ -140,7 +140,7 @@
             }
         },
         "/es/getMapping": {
-            "get": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -151,6 +151,20 @@
                     "es查询"
                 ],
                 "summary": "获取索引字段",
+                "parameters": [
+                    {
+                        "description": "indices",
+                        "name": "indices",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
